--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^4.3.0",
     "framer-motion": "^10.15.0",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
